add pic upload by user

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,5 +1,8 @@
 <h1>All my cocktails</h1>
 
+<%= cl_image_tag("cocktails-blender-1240x503_ttwyzf",
+      width: 1000, height: 300, crop: :fill) %>
+
 <table>
   <thead>
     <tr>
@@ -16,6 +19,8 @@
     <% end %>
   </tbody>
 </table>
+
+
 
 <br>
 
