--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -3,7 +3,12 @@
   <%= @cocktail.name %>
 </p>
 
-
-<%= cl_image_tag @article.photo.key, height: 300, width: 400, crop: :fill %>
+<div>
+  <% if @cocktail.photo.attached? %>
+    <%= cl_image_tag @cocktail.photo.key, height: 400, width: 300, crop: :fill %>
+  <% else %>
+    <%= cl_image_tag "cocktail_default_pic",  height: 400, width: 300, crop: :fill %>
+  <% end %>
+</div>
 
 <%= link_to 'Back', cocktails_path %>
